Integracion Clever Cloud - Modelo entrenamiento de datos

--- a/SistemaAlmacen/src/main/java/Vistas/ControlMaterial.form
+++ b/SistemaAlmacen/src/main/java/Vistas/ControlMaterial.form
@@ -107,9 +107,7 @@
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btn_usuarios" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btn_inventario" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
                       <Component id="btn_maquinas" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btn_materiales" min="-2" max="-2" attributes="0"/>
@@ -124,10 +122,9 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btn_maquinas" max="32767" attributes="0"/>
+                          <Component id="btn_maquinas" pref="37" max="32767" attributes="0"/>
                           <Component id="btn_usuarios" max="32767" attributes="0"/>
                           <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="btn_inventario" alignment="0" max="32767" attributes="0"/>
                           <Component id="btn_materiales" max="32767" attributes="0"/>
                           <Component id="btn_informes" alignment="0" max="32767" attributes="0"/>
                       </Group>
@@ -160,14 +157,6 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_maquinasMouseClicked"/>
-              </Events>
-            </Component>
-            <Component class="javax.swing.JButton" name="btn_inventario">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="INVENTARIO"/>
-              </Properties>
-              <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_inventarioMouseClicked"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btn_materiales">
