--- a/SistemaAlmacen/src/main/java/Vistas/Informes.form
+++ b/SistemaAlmacen/src/main/java/Vistas/Informes.form
@@ -109,15 +109,13 @@
                           <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btn_usuarios" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="btn_inventario" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
                           <Component id="btn_maquinas" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="btn_materiales" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="btn_controlherramientas" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="333" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -128,7 +126,6 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jButton1" alignment="0" pref="35" max="32767" attributes="0"/>
                               <Component id="btn_usuarios" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btn_inventario" alignment="0" max="32767" attributes="0"/>
                               <Component id="btn_maquinas" alignment="0" max="32767" attributes="0"/>
                               <Component id="btn_materiales" alignment="0" max="32767" attributes="0"/>
                               <Component id="btn_controlherramientas" alignment="0" max="32767" attributes="0"/>
@@ -154,14 +151,6 @@
                   </Properties>
                   <Events>
                     <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_usuariosMouseClicked"/>
-                  </Events>
-                </Component>
-                <Component class="javax.swing.JButton" name="btn_inventario">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" value="INVENTARIO"/>
-                  </Properties>
-                  <Events>
-                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_inventarioMouseClicked"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btn_materiales">
@@ -248,7 +237,7 @@
                                           <Component id="jButton4" min="-2" pref="132" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace min="0" pref="50" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="78" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -291,10 +280,10 @@
                                   </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="3" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jLabel14" alignment="1" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel16" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel15" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
