--- a/SistemaAlmacen/src/main/java/Vistas/Usuarios.form
+++ b/SistemaAlmacen/src/main/java/Vistas/Usuarios.form
@@ -93,9 +93,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="BotonPANEL" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="BotonAlmacen" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="121" max="-2" attributes="0"/>
                       <Component id="BotonHerramientas" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="BotonMaterial" min="-2" pref="100" max="-2" attributes="0"/>
@@ -113,7 +111,6 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="BotonPANEL" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
-                          <Component id="BotonAlmacen" alignment="0" max="32767" attributes="0"/>
                           <Component id="BotonHerramientas" alignment="0" max="32767" attributes="0"/>
                           <Component id="BotonMaterial" alignment="0" max="32767" attributes="0"/>
                           <Component id="BotonInformes" alignment="0" max="32767" attributes="0"/>
@@ -147,14 +144,6 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="BotonMaterialMouseClicked"/>
-              </Events>
-            </Component>
-            <Component class="javax.swing.JButton" name="BotonAlmacen">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="INVENTARIO"/>
-              </Properties>
-              <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="BotonAlmacenMouseClicked"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="BotonInformes">
