Correccion de guardado y actualizacion de Herramientas

--- a/SistemaAlmacen/src/main/java/Vistas/ControlHerramientas.form
+++ b/SistemaAlmacen/src/main/java/Vistas/ControlHerramientas.form
@@ -227,7 +227,10 @@
                                               <EmptySpace max="-2" attributes="0"/>
                                               <Component id="jLabelMensaje" min="-2" pref="258" max="-2" attributes="0"/>
                                           </Group>
-                                          <Component id="jLabelIMAGENrecibida" min="-2" pref="443" max="-2" attributes="0"/>
+                                          <Group type="102" attributes="0">
+                                              <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
+                                              <Component id="jLabelIMAGENrecibida" min="-2" pref="443" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="jLabel11" min="-2" pref="238" max="-2" attributes="0"/>
@@ -312,7 +315,7 @@
                           </Group>
                           <Component id="jLabelIMAGENrecibida" min="-2" pref="340" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="12" max="32767" attributes="0"/>
                   </Group>
                   <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
@@ -605,14 +608,21 @@
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jButtonASIGNAR" alignment="0" max="32767" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="102" pref="102" max="-2" attributes="0"/>
-                                  <Component id="jComboBoxESTADO" min="-2" pref="209" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="102" alignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Group type="102" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Group type="102" alignment="0" attributes="0">
+                                                  <EmptySpace min="102" pref="102" max="-2" attributes="0"/>
+                                                  <Component id="jComboBoxESTADO" min="-2" pref="209" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Component id="jLabel30" max="32767" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="jButtonESTADOHERRAMIENTA" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jLabel23" min="-2" max="-2" attributes="0"/>
@@ -650,19 +660,16 @@
                                                   <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
-                                          <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jLabelIDMaquina" alignment="0" max="32767" attributes="0"/>
                                               <Component id="jLabelUsuario" alignment="1" max="32767" attributes="0"/>
                                           </Group>
-                                          <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="jButtonASIGNAR" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jLabel30" alignment="0" max="32767" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                               </Group>
                           </Group>
+                          <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -702,6 +709,7 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel30" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jComboBoxESTADO" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jButtonESTADOHERRAMIENTA" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jButtonASIGNAR" min="-2" pref="45" max="-2" attributes="0"/>
@@ -842,6 +850,15 @@
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
                   </AuxValues>
+                </Component>
+                <Component class="javax.swing.JButton" name="jButtonESTADOHERRAMIENTA">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="ESTADO"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButtonESTADOHERRAMIENTAMouseClicked"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonESTADOHERRAMIENTAActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
